--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - pip
     - poetry
     - setuptools
-    - wheels
+    - wheel
   run:
     - python
     - types-pytz >=2022.1.1
