--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
   run:
     - python
     - types-pytz >=2022.1.1
+    - {{ pin_compatible('numpy', lower_bound='1.26.0')}}
 
 test:
   requires:
