--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  # s390x is missing types-pytz>=2022.1.1
+  # s390x is missing types-pytz
   skip: True  # [py<39 or s390x]
 
 requirements:
